# emulator-cpu-simple6206

./: CMakeLists.txt  Doc.txt  README.md  compile.sh  cpu.cpp  cpu.h  cpu.txt  main.cpp  memory.cpp  memory.h  opcode.h  run.sh  task.txt
Docker/: .dockerignore  Dockerfile
doc/: cpu.txt  resources.txt
include/: CMakeLists.txt  cpu.h  except.h  exceptType.h  memory.h  opcode.h  types.h
scripts/: compile.sh  run.sh  test.sh
scripts/linux/: run.sh
src/: CMakeLists.txt  cpu.cpp  main.cpp  memory.cpp
test/: CMakeLists.txt  initialTest.cpp
