# # Configuración de archivos de prueba en la carpeta test
# file(GLOB TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

# # Configuración del ejecutable de pruebas
# add_executable(MyTests ${TEST_SOURCES})

# # Agrega las dependencias necesarias, como la biblioteca principal y cualquier otra dependencia de prueba
# target_link_libraries(MyTests ${PROJECT_NAME})

# # Agrega los directorios de inclusión necesarios
# target_include_directories(MyTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
